--- a/utility-vm/Vagrantfile
+++ b/utility-vm/Vagrantfile
@@ -6,8 +6,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.hostname = "utility-vm.local"
 
-  config.vm.network "private_network", ip: "192.168.10.110",
-        virtualbox__intnet: true
+  config.vm.network "private_network", ip: "192.168.10.20"
 
   config.vm.synced_folder "~/data", "/data"
 
@@ -17,13 +16,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.gui = false
   end
 
-#  config.vm.provision "chef_client" do |chef|
-#    chef.chef_server_url = "http://192.168.1.79:8000"
-#    chef.validation_key_path = "~/chef/.chef/validation.pem"
-#    #chef.run_list = [ "recipe[java_wrapper::default]" ]
-#    #chef.add_role "base"
-#    #chef.environment = "dev"
-#    chef.delete_node = true
-#    chef.delete_client = true
-#  end
+  config.vm.provision "chef_client" do |chef|
+    chef.chef_server_url = "http://192.168.1.79:8000"
+    chef.validation_key_path = "~/chef/.chef/validation.pem"
+    chef.run_list = [ "recipe[utility_vm-runlist]" ]
+    #chef.add_role "base"
+    #chef.environment = "dev"
+    #chef.delete_node = true
+    #chef.delete_client = true
+  end
 end
